fixed export overwrites