@@ -5,6 +5,7 @@
 	-XX:+UseCompressedClassPointers ^
 	--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ^
 	--add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED ^
+    --add-exports javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED ^
 	--add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED ^
 	--add-exports javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED ^
 	--add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED ^
